@@ -32,7 +32,7 @@ type argument_type =
   | TacticArgType
   | CastedOpenConstrArgType
   | ConstrWithBindingsArgType
-  | WithBindingsArgType
+  | BindingsArgType
   | RedExprArgType
   | List0ArgType of argument_type
   | List1ArgType of argument_type
@@ -121,9 +121,9 @@ let rawwit_constr_with_bindings = ConstrWithBindingsArgType
 let globwit_constr_with_bindings = ConstrWithBindingsArgType
 let wit_constr_with_bindings = ConstrWithBindingsArgType
 
-let rawwit_with_bindings = WithBindingsArgType
-let globwit_with_bindings = WithBindingsArgType
-let wit_with_bindings = WithBindingsArgType
+let rawwit_bindings = BindingsArgType
+let globwit_bindings = BindingsArgType
+let wit_bindings = BindingsArgType
 
 let rawwit_red_expr = RedExprArgType
 let globwit_red_expr = RedExprArgType
